--- a/src/views/hardware_items.pug
+++ b/src/views/hardware_items.pug
@@ -75,14 +75,14 @@ html
                         th(scope='col') Status
                         th(scope='col') Location
                     tbody
-                        each item of data
-                            tr
-                                each value of item
-                                    td=value
-                                td
-                                    .d-grid.gap-2.text-nowrap.justify-content-evenly
-                                        a.btn.btn-secondary(href='') Message on Discord
-                                        button.btn.btn-danger(type='button') Return Item
+                        // each item of data
+                        //     tr
+                        //         each value of item
+                        //             td=value
+                        //         td
+                        //             .d-grid.gap-2.text-nowrap.justify-content-evenly
+                        //                 a.btn.btn-secondary(href='') Message on Discord
+                        //                 button.btn.btn-danger(type='button') Return Item
                                     //.d-grid.gap-2.text-nowrap.justify-content-evenly
                                     //    button.btn.btn-danger(type='button') Return Item
                                     //a(href='https://discordapp.com/api/webhooks/1092228852203401236/T6EP0MZrnFnhHaHXN4_ZLcDusZ7NOVTgwA5SWwpkrhXjV35K7GxNKhauhMbDlEKRUpe7')
