--- a/src/views/available.pug
+++ b/src/views/available.pug
@@ -19,8 +19,8 @@ html
                                      th Hardware Name
                                      th Count Available
                              tbody
-                                 each item of available
-                                     - x++
-                                     tr
-                                         each column of item
-                                             td= column
+                                 // each item of available
+                                 //     - x++
+                                 //     tr
+                                 //         each column of item
+                                 //             td= column
