--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -1,7 +1,7 @@
 doctype html
 html
     head
-        include includes/dashboardBar
+        include includes/dashboard_bar
         script(src='/static/scripts/dashboard.js')
 
         //link(rel='stylesheet', type='text/css', href='/static/stylesheets/dashboard.css')
@@ -10,7 +10,7 @@ html
 
        main
             //.space
-            //include includes/dashboardBar
+            //include includes/dashboard_bar
             //p= idk.data
 
 
