--- a/src/views/includes/navbar.pug
+++ b/src/views/includes/navbar.pug
@@ -47,13 +47,13 @@ html(lang='en')
                             a.navbarLink.nav-link(href='gallery') Gallery
                         |
                         li.nav-item
-                            a.navbarLink.nav-link(href='judgingCriteria') Judging Criteria
+                            a.navbarLink.nav-link(href='judging_criteria') Judging Criteria
                         //|
                         //li.nav-item
                         //    a.navbarLink.nav-link(href='hardwareList') Hardware
                         |
                         li.nav-item
-                            a.navbarLink.nav-link(href='pastEvents') Past Events
+                            a.navbarLink.nav-link(href='past_events') Past Events
                         |
                         li.nav-item.dropdown
                             a.nav-link.dropdown-toggle.me-3(href='#', role='button', data-bs-toggle='dropdown', aria-expanded='false')
