--- a/src/views/hardware_items_available.pug
+++ b/src/views/hardware_items_available.pug
@@ -1,6 +1,6 @@
 html
     head
-        include includes/dashboardBar
+        include includes/dashboard_bar
 
         link(rel='stylesheet', type='text/css', href='/static/stylesheets/dashboard.css')
 
