--- a/src/views/event_applications.pug
+++ b/src/views/event_applications.pug
@@ -26,7 +26,7 @@ html
                 //         else if (item.status === 'declined')
                 //             span.badge.text-danger-emphasis.m-1= item.count
 
-                a(href='/dashboard/event_applications/summary').btn.btn-primary summary
+                a(href='/dashboard/event_applications/event_applications_summary').btn.btn-primary Summary
 
             .container-md.text-center.p-2.my-3.border
 
