--- a/src/views/event_applications_summary.pug
+++ b/src/views/event_applications_summary.pug
@@ -17,11 +17,11 @@ html
                         th(scope='col') Food Restrictions
                         th(scope='col') Count
                     tbody
-                        each item of food
-                            - x++
-                            tr
-                                each value of item
-                                    td=value
+                        // each item of food
+                        //     - x++
+                        //     tr
+                        //         each value of item
+                        //             td=value
 
             table.table.table-striped.table-bordered.my-4
                 thead
@@ -29,19 +29,19 @@ html
                         th(scope='col') School
                         th(scope='col') Count
                     tbody
-                        each item of school
-                            - x++
-                            tr
-                                each value of item
-                                    td=value
+                        // each item of school
+                        //     - x++
+                        //     tr
+                        //         each value of item
+                        //             td=value
             table.table.table-striped.table-bordered.my-4
                 thead
                     tr
                         th(scope='col') T-shirt Size
                         th(scope='col') Count
                     tbody
-                        each item of tshirt
-                            - x++
-                            tr
-                                each value of item
-                                    td=value
+                        // each item of tshirt
+                        //     - x++
+                        //     tr
+                        //         each value of item
+                        //             td=value
