--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -8,7 +8,10 @@ html
 
     body
 
-       main
+        main
+
+            p= userRoles
+
             //.space
             //include includes/dashboard_bar
             //p= idk.data
