if statement test

--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -12,6 +12,9 @@ html
 
             p= userRoles
 
+            if(userRoles = 'Attendee')
+                p this person is an attendee
+
             //.space
             //include includes/dashboard_bar
             //p= idk.data
