scopes dashboard page

--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -12,13 +12,108 @@ html
 
             p= userRoles
 
+            if(userRoles = 'Organizer')
+                .outside.bd-example.bd-example-cols.m-3
+                    .container.text-center
+                        .row.row-cols-sm-2.row-cols-md-4.g-4.g-lg-4
+                            .col.text-decoration-none
+                                .p-3 Total Applicants
+                                    span.badge.text-bg-secondary.m-1 0
+                            .col.text-decoration-none
+                                .p-3 RSVP&apos;d
+                                    span.badge.text-bg-secondary.m-1 0
+                            .col.text-decoration-none
+                                .p-3 Hardware Checkouts
+                                    span.badge.text-bg-secondary.m-1 0
+                            .col.text-decoration-none
+                                .p-3 Mentorship Requests
+                                    span.badcoration-none
+                                .p-3 Listed Eventsge.text-bg-secondary.m-1 0
+                                //                    .col.text-de
+                                    span.badge.text-bg-secondary.m-1 0
+                            .col.text-decoration-none
+                                .p-3 Listed Prizes
+                                    span.badge.text-bg-secondary.m-1 0
+                            .col.text-decoration-none
+                                .p-3 Hardware Items
+                                    span.badge.text-bg-secondary.m-1 0
+                            .col.text-decoration-none
+                                .p-3 Listed Projects
+                                    span.badge.text-bg-secondary.m-1 0
+
+        .row.row-cols-1.row-cols-md-2.g-4.text-center.m-3
+            .col
+                .card
+                    .card-body
+                        h5.card-title Upcoming Events
+                        p.card-text
+                            table.table
+                                thead
+                                    tr
+                                        th(scope='col') Event
+                                        th(scope='col') Time
+                                tbody
+                                    tr
+                                        td Event
+                                        td 10:00
+                                    tr
+                                        td Event 1
+                                        td 12:00
+                        a.btn.btn-secondary(href='#') View All
+            .col
+                .card
+                    .card-body
+                        h5.card-title Card title
+                        p.card-text
+                            | This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+                        a.btn.btn-primary(href='#') Go somewhere
+            .col
+                .card
+                    .card-body
+                        h5.card-title Card title
+                        p.card-text
+                            | This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+                        a.btn.btn-primary(href='#') Go somewhere
+
+
             if(userRoles = 'Attendee')
-                p this person is an attendee
-
-            //.space
-            //include includes/dashboard_bar
-            //p= idk.data
-
+                h1.m-2 Home
+                    .row.row-cols-1.row-cols-md-3.g-0.m-3.text-center
+                        .col
+                            .card.m-1
+                                .card-body
+                                    h2.card-title Check In
+                                    hr
+                                    p.card-text
+                                        | QR Code
+                                    a.btn.btn-primary(href='') Go somewhere
+                        .col
+                            .card.m-1
+                                .card-body
+                                    h2.card-title Upcoming Events
+                                    hr
+                                    p.card-text
+                                        table.table
+                                            thead
+                                                tr
+                                                    th(scope='col') Event
+                                                    th(scope='col') Time
+                                            tbody
+                                                tr
+                                                    td Event
+                                                    td 10:00
+                                                tr
+                                                    td Event 1
+                                                    td 12:00
+                                    a.btn.btn-secondary(href='') View All
+                        .col
+                            .card.m-1
+                                .card-body
+                                    h2.card-title Discord Channel
+                                    hr
+                                    p.card-text
+                                        | This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+                                    a.btn.btn-primary(href='') Go to Discord Channel
 
                 //ADMINISTRATOR DASHBOARD VIEW
             //nav
@@ -299,43 +394,7 @@ html
             //
             //#nav-tabContent.tab-content
             //    #nav-home.tab-pane.fade.show.active(role='tabpanel', aria-labelledby='nav-applications-tab', tabindex='0')
-            //        h1.m-2 Home
-            //        .row.row-cols-1.row-cols-md-3.g-0.m-3.text-center
-            //            .col
-            //                .card.m-1
-            //                    .card-body
-            //                        h2.card-title Check In
-            //                        hr
-            //                        p.card-text
-            //                            | QR Code
-            //                        a.btn.btn-primary(href='') Go somewhere
-            //            .col
-            //                .card.m-1
-            //                    .card-body
-            //                        h2.card-title Upcoming Events
-            //                        hr
-            //                        p.card-text
-            //                            table.table
-            //                                thead
-            //                                    tr
-            //                                        th(scope='col') Event
-            //                                        th(scope='col') Time
-            //                                tbody
-            //                                    tr
-            //                                        td Event
-            //                                        td 10:00
-            //                                    tr
-            //                                        td Event 1
-            //                                        td 12:00
-            //                        a.btn.btn-secondary(href='') View All
-            //            .col
-            //                .card.m-1
-            //                    .card-body
-            //                        h2.card-title Discord Channel
-            //                        hr
-            //                        p.card-text
-            //                            | This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-            //                        a.btn.btn-primary(href='') Go to Discord Channel
+
             //
             //    #nav-application.tab-pane.fade(role='tabpanel', aria-labelledby='nav-applications-tab', tabindex='0')
             //        form.needs-validation.regContainer.pb-3(novalidate="")
