--- a/src/views/includes/dashboard_bar.pug
+++ b/src/views/includes/dashboard_bar.pug
@@ -44,29 +44,29 @@ html(lang='en')
                     li.nav-item
                         a.nav-link(href='/logout') Logout
 
-        if(userRoles = 'Attendee')
-            ul.nav.nav-tabs.justify-content-center
-                li.nav-item
-                    a.nav-link.active(aria-current='page', href='/dashboard') Dashboard Home
-                li.nav-item
-                    a.nav-link(href='/dashboard/hardware_items') Hardware
-                li.nav-item
-                    a.nav-link(href='#') Check In
-                li.nav-item
-                    a.nav-link(href='/dashboard/event_applications') Application
-                li.nav-item
-                    a.nav-link(href='/dashboard/event_applications/summary') Information
-                li.nav-item
-                    a.nav-link(href='#') Prizes
-                li.nav-item
-                    a.nav-link(href='#') Projects
-                // TODO: dropdown
-                li.nav-item
-                    a.nav-link(href='/') Back to Home Page
-
-                if(isAuthenticated)
-                    li.nav-item
-                        a.nav-link(href='/logout') Logout
+        //if(userRoles = 'Attendee')
+        //    ul.nav.nav-tabs.justify-content-center
+        //        li.nav-item
+        //            a.nav-link.active(aria-current='page', href='/dashboard') Dashboard Home
+        //        li.nav-item
+        //            a.nav-link(href='/dashboard/hardware_items') Hardware
+        //        li.nav-item
+        //            a.nav-link(href='#') Check In
+        //        li.nav-item
+        //            a.nav-link(href='/dashboard/event_applications') Application
+        //        li.nav-item
+        //            a.nav-link(href='/dashboard/event_applications/summary') Information
+        //        li.nav-item
+        //            a.nav-link(href='#') Prizes
+        //        li.nav-item
+        //            a.nav-link(href='#') Projects
+        //        // TODO: dropdown
+        //        li.nav-item
+        //            a.nav-link(href='/') Back to Home Page
+        //
+        //        if(isAuthenticated)
+        //            li.nav-item
+        //                a.nav-link(href='/logout') Logout
 
 
         // PARTICIPANT VIEW
