small fixes on layout

--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -27,9 +27,9 @@ html
                                     span.badge.text-bg-secondary.m-1 0
                             .col.text-decoration-none
                                 .p-3 Mentorship Requests
-                                    span.badcoration-none
-                                .p-3 Listed Eventsge.text-bg-secondary.m-1 0
-                                //                    .col.text-de
+                                    span.badge.text-bg-secondary.m-1 0
+                            .col.text-decoration-none
+                                .p-3 Listed Events
                                     span.badge.text-bg-secondary.m-1 0
                             .col.text-decoration-none
                                 .p-3 Listed Prizes
