--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -40,7 +40,6 @@ html
                             .col.text-decoration-none
                                 .p-3 Listed Projects
                                     span.badge.text-bg-secondary.m-1 0
-
                 .row.row-cols-1.row-cols-md-2.g-4.text-center.m-3
                     .col
                         .card
@@ -76,7 +75,8 @@ html
                                 a.btn.btn-primary(href='#') Go somewhere
 
 
-            //if(userRoles = 'Attendee')
+            if(userRoles = 'Attendee')
+                p I should only see this if i am an attendee
             //    h1.m-2 Home
             //        .row.row-cols-1.row-cols-md-3.g-0.m-3.text-center
             //            .col
