--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -75,7 +75,7 @@ html
                                 a.btn.btn-primary(href='#') Go somewhere
 
 
-            if(userRoles = 'Attendee')
+            if(userRoles.includes('Attendee'))
                 p I should only see this if i am an attendee
             //    h1.m-2 Home
             //        .row.row-cols-1.row-cols-md-3.g-0.m-3.text-center
