--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -13,6 +13,7 @@ html
             p= userRoles
 
             if(userRoles.includes('Organizer'))
+                p=userRoles
                 .outside.bd-example.bd-example-cols.m-3
                     .container.text-center
                         .row.row-cols-sm-2.row-cols-md-4.g-4.g-lg-4
