--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -76,7 +76,7 @@ html
                                 a.btn.btn-primary(href='#') Go somewhere
 
 
-            if(userRoles.includes('Attendee'))
+            else if(userRoles.includes('Attendee'))
                 h1.m-2 Home
                     .row.row-cols-1.row-cols-md-3.g-0.m-3.text-center
                         .col
