--- a/src/views/event_applications.pug
+++ b/src/views/event_applications.pug
@@ -8,7 +8,7 @@ html
     body
 
 
-        if(userRole.includes('Organizer'))
+        if(userRoles.includes('Organizer'))
             h1.m-2 Event Applications
                 .container-md.text-center.p-2.border
 
