--- a/src/views/includes/navbar.pug
+++ b/src/views/includes/navbar.pug
@@ -39,10 +39,10 @@ html(lang='en')
                 |
                 #collapsibleNavbar.collapse.navbar-collapse.justify-content-end
                     ul.navbar-nav
-                        li.nav-item
-                            // TODO: past hackathons
-                            a.navbarLink.nav-link(href='#') Hackathons
-                        |
+                        //li.nav-item
+                        //    // TODO: past hackathons
+                        //    a.navbarLink.nav-link(href='#') Hackathons
+                        //|
                         li.nav-item
                             a.navbarLink.nav-link(href='gallery') Gallery
                         |
