left aligned burger

--- a/src/views/includes/navbar.pug
+++ b/src/views/includes/navbar.pug
@@ -19,7 +19,7 @@ html(lang='en')
 
         // NAVIGATION BAR
         nav.navbar.navbar-expand-md.bg-gradient(role='navigation' aria-label='Navigation Bar')
-            .container-fluid
+            .container-md.justify-content-start
                 a.navbar-brand.text-white(href='/' aria-label='Home' tabindex='-1')
 
                     // MOBILE
