--- a/src/views/includes/navbar.pug
+++ b/src/views/includes/navbar.pug
@@ -18,8 +18,8 @@ html(lang='en')
     body
 
         // NAVIGATION BAR
-        nav.navbar.navbar-expand-md.bg-gradient(role='navigation' aria-label='Navigation Bar')
-            .container-md.justify-content-start
+        nav.navbar.navbar-expand-lg.bg-gradient(role='navigation' aria-label='Navigation Bar')
+            .container-md.justify-content-center
                 a.navbar-brand.text-white(href='/' aria-label='Home' tabindex='-1')
 
                     // MOBILE
@@ -37,7 +37,7 @@ html(lang='en')
                 button.navbar-toggler(type='button', data-bs-toggle='collapse', data-bs-target='#collapsibleNavbar' aria-label='Menu')
                     span.navbar-toggler-icon
                 |
-                #collapsibleNavbar.collapse.navbar-collapse.justify-content-end
+                #collapsibleNavbar.collapse.navbar-collapse
                     ul.navbar-nav
                         //li.nav-item
                         //    // TODO: past hackathons
