--- a/src/views/includes/navbar.pug
+++ b/src/views/includes/navbar.pug
@@ -18,56 +18,60 @@ html(lang='en')
     body
 
         // NAVIGATION BAR
-        nav.navbar.navbar-expand-md.bg-gradient(role='navigation' aria-label='Navigation Bar')
-            .container-md.justify-content-start
-                a.navbar-brand.text-white(href='/' aria-label='Home' tabindex='-1')
+    nav.navbar.navbar-expand-xl
+        .container-fluid
 
-                    // MOBILE
-                    #mobileHeader
-                        img.me-2.d-inline-block(src='/static/images/fountain_white.png', alt='ycp_fountain', width='auto', height='25' aria-label='Home')
-                        | YCP Hacks
+            button.navbar-toggler.bg-light(type='button', data-bs-toggle='collapse', data-bs-target='#navbarTogglerDemo01', aria-controls='navbarTogglerDemo01', aria-expanded='false', aria-label='Toggle navigation')
+                span.navbar-toggler-icon
 
-                    // DESKTOP
-                    #desktopHeader
+            #navbarTogglerDemo01.collapse.navbar-collapse
+
+                a.navbar-brand.text-white(href='welcomePage' aria-label='Home' tabindex='-1')
+                    #desktopHeader.d-none.d-xl-block
                         .me-2.d-inline-block
                             img(src='/static/images/fountain_white.png', alt='ycp_fountain', width='auto', height='25')
-                            a.replaceText.text-decoration-none#style-2(href='/', data-replace='Home' aria-label='Home')
+                            a.replaceText.text-decoration-none#style-2(href='welcomePage', data-replace='Home' aria-label='Home')
                                 span YCP Hacks
 
-                button.navbar-toggler(type='button', data-bs-toggle='collapse', data-bs-target='#collapsibleNavbar' aria-label='Menu')
-                    span.navbar-toggler-icon
-                |
-                #collapsibleNavbar.collapse.navbar-collapse.justify-content-end
-                    ul.navbar-nav
-                        //li.nav-item
-                        //    // TODO: past hackathons
-                        //    a.navbarLink.nav-link(href='#') Hackathons
-                        //|
-                        li.nav-item
-                            a.navbarLink.nav-link(href='gallery') Gallery
-                        |
-                        li.nav-item
-                            a.navbarLink.nav-link(href='judging_criteria') Judging Criteria
-                        //|
-                        //li.nav-item
-                        //    a.navbarLink.nav-link(href='hardwareList') Hardware
-                        |
-                        li.nav-item
-                            a.navbarLink.nav-link(href='past_events') Past Events
-                        |
-                        if(isAuthenticated)
-                            li.nav-item.dropdown
-                                a.nav-link.dropdown-toggle.me-3(href='#', role='button', data-bs-toggle='dropdown', aria-expanded='false')
-                                    | Account
-                                ul.dropdown-menu.dropdown-menu.end.dropdown-menu-lg-start
-                                    li
-                                        a.dropdown-item(href='/dashboard') Dashboard
-                                    li
-                                        hr.dropdown-divider
-                                    li
-                                        a.dropdown-item(href='/logout') Logout
-                        else
+
+                ul.navbar-nav.me-auto.mb-2.mb-lg-0
+                    li.nav-item
+                        a.navbarLink.nav-link(href='gallery') Gallery
+                    |
+                    li.nav-item
+                        a.navbarLink.nav-link(href='judgingCriteria') Judging Criteria
+                    |
+                    li.nav-item
+                        a.navbarLink.nav-link(href='hardwareList') Hardware
+                    |
+                    li.nav-item
+                        a.navbarLink.nav-link(href='pastEvents') Past Events
+                    |
+
+
+                    .d-none.d-xl-block
+                        li.nav-item.dropdown
+                            a.nav-link.dropdown-toggle.me-3(href='#', role='button', data-bs-toggle='dropdown', aria-expanded='false')
+                                | Account
+                            ul.dropdown-menu.dropdown-menu.end.dropdown-menu-lg-start
+                                li
+                                    a.dropdown-item(href='/dashboard') Dashboard
+                                li
+                                    hr.dropdown-divider
+                                li
+                                    a.dropdown-item(href='/logout') Logout
+
+                    .d-lg-block.d-xl-none
+                        li.nav-item.dropdown
+                            li
+                                hr.dropdown-divider
                             li.nav-item
-                                a.navbarLink.nav-link(href='/dashboard') Login
-            a#mlh-trust-badge(style='display:block;max-width:100px;min-width:60px;position:absolute;right:50px;top:0;width:10%;z-index:10000', href='https://mlh.io/na?utm_source=na-hackathon&utm_medium=TrustBadge&utm_campaign=2023-season&utm_content=blue', target='_blank')
-                img.mlh-logo(src='https://s3.amazonaws.com/logged-assets/trust-badge/2023/mlh-trust-badge-2023-blue.svg', alt='Major League Hacking 2023 Hackathon Season', style='width:100%')
+                                a.navbarLink.nav-link(href='hardwareList') Dashboard
+                            |
+                            li.nav-item
+                                a.navbarLink.nav-link(href='pastEvents') Logout
+
+                .d-flex.d-none.d-xl-block
+                    a#mlh-trust-badge(style='display:block;max-width:100px;min-width:60px;position:absolute;right:50px;top:0;width:10%;z-index:10000', href='https://mlh.io/na?utm_source=na-hackathon&utm_medium=TrustBadge&utm_campaign=2023-season&utm_content=blue', target='_blank')
+                        img.mlh-logo(src='https://s3.amazonaws.com/logged-assets/trust-badge/2023/mlh-trust-badge-2023-blue.svg', alt='Major League Hacking 2023 Hackathon Season', style='width:100%')
+       
