--- a/src/views/includes/navbar.pug
+++ b/src/views/includes/navbar.pug
@@ -29,7 +29,7 @@ html(lang='en')
                         #desktopHeader.d-none.d-xl-block
                             .me-2.d-inline-block
                                 img(src='/static/images/fountain_white.png', alt='ycp_fountain', width='auto', height='25')
-                                a.replaceText.text-decoration-none#style-2(href='welcomePage', data-replace='Home' aria-label='Home')
+                                a.replaceText.text-decoration-none#style-2(href='/', data-replace='Home' aria-label='Home')
                                     span YCP Hacks
 
 
@@ -38,11 +38,9 @@ html(lang='en')
                             a.navbarLink.nav-link(href='gallery') Gallery
                         |
                         li.nav-item
-                            a.navbarLink.nav-link(href='judgingCriteria') Judging Criteria
+                            a.navbarLink.nav-link(href='judging_criteria') Judging Criteria
                         |
-                        li.nav-item
-                            a.navbarLink.nav-link(href='hardwareList') Hardware
-                        |
+                        
                         li.nav-item
                             a.navbarLink.nav-link(href='pastEvents') Past Events
                         |
@@ -65,10 +63,10 @@ html(lang='en')
                                 li
                                     hr.dropdown-divider
                                 li.nav-item
-                                    a.navbarLink.nav-link(href='hardwareList') Dashboard
+                                    a.navbarLink.nav-link(href='/dashboard') Dashboard
                                 |
                                 li.nav-item
-                                    a.navbarLink.nav-link(href='pastEvents') Logout
+                                    a.navbarLink.nav-link(href='/logout') Logout
 
                     .d-flex.d-none.d-xl-block
                         a#mlh-trust-badge(style='display:block;max-width:100px;min-width:60px;position:absolute;right:50px;top:0;width:10%;z-index:10000', href='https://mlh.io/na?utm_source=na-hackathon&utm_medium=TrustBadge&utm_campaign=2023-season&utm_content=blue', target='_blank')
