--- a/src/views/includes/navbar.pug
+++ b/src/views/includes/navbar.pug
@@ -40,9 +40,9 @@ html(lang='en')
                         li.nav-item
                             a.navbarLink.nav-link(href='judging_criteria') Judging Criteria
                         |
-                        
+
                         li.nav-item
-                            a.navbarLink.nav-link(href='pastEvents') Past Events
+                            a.navbarLink.nav-link(href='past_events') Past Events
                         |
 
 
