size navbar fix

--- a/src/views/includes/navbar.pug
+++ b/src/views/includes/navbar.pug
@@ -25,8 +25,8 @@ html(lang='en')
 
                 #navbarTogglerDemo01.collapse.navbar-collapse
 
-                    a.navbar-brand.text-white(href='welcomePage' aria-label='Home' tabindex='-1')
-                        #desktopHeader.d-none.d-xl-block
+                    a.navbar-brand.text-white.d-none.d-xl-block(href='/' aria-label='Home' tabindex='-1')
+                        #desktopHeader
                             .me-2.d-inline-block
                                 img(src='/static/images/fountain_white.png', alt='ycp_fountain', width='auto', height='25')
                                 a.replaceText.text-decoration-none#style-2(href='/', data-replace='Home' aria-label='Home')
